--- a/build.gradle
+++ b/build.gradle
@@ -19,8 +19,8 @@ repositories {
 }
 
 dependencies {
-    implementation group: 'io.github.bonigarcia', name: 'webdrivermanager', version: '4.4.3'
-    implementation group: 'org.seleniumhq.selenium', name: 'selenium-java', version: '4.0.0-alpha-1'
+    implementation group: 'io.github.bonigarcia', name: 'webdrivermanager', version: '5.5.3'
+    implementation group: 'org.seleniumhq.selenium', name: 'selenium-java', version: '4.12.1'
 }
 
 //task startScript(type:Exec) {
